# ShapeServer

./: LICENSE  README.md  Report.md  ShapeExample2.cabal  notes4Report  stack.yaml
.stack-work/: stack.sqlite3
src/: Examples.hs  Main.hs  Render.hs  Shapes.hs
