name:                ShapeExample2
version:             0.1.0.0
synopsis:            Adapted simple shape example for CS4012 assignment 1 - ShapeServer
homepage:            https://github.com/ruthbrennankk/ShapeServer
license:             BSD3
license-file:        LICENSE
author:              Glenn Strong & Ruth Brennan
maintainer:          brennar5@tcd.ie
copyright:           2017 Glenn Strong
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ShapeServer
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Render, Shapes
  default-language:    Haskell2010
  build-depends:
         base >=4.7 && <5
       , blaze-html
       , scotty
       , JuicyPixels
       , text

